--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "author": "deepak-webdev",
+    "description": "A web app that helps people to learn",
     "name": "fcc-learn-npm-package-json",
     "dependencies": {
         "express": "^4.14.0"
