--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "author": "deepak-webdev",
     "description": "A web app that helps people to learn",
+    "keywords": [
+        "descriptive",
+        "related",
+        "freecodecamp"
+    ],
     "name": "fcc-learn-npm-package-json",
     "dependencies": {
         "express": "^4.14.0"
